--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
       href="https://fonts.googleapis.com/css2?family=Aldrich&family=Orbitron:wght@400;500;600;700;800;900&family=Rajdhani:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <link rel="icon" href="https://scontent.fjsr12-1.fna.fbcdn.net/v/t39.30808-1/357369043_276418308388774_6026414289591781043_n.jpg?stp=c0.0.80.80a_cp0_dst-jpg_p80x80&_nc_cat=102&ccb=1-7&_nc_sid=7206a8&_nc_ohc=ZFu0vdx3t9QAX9R0jTh&_nc_ht=scontent.fjsr12-1.fna&oh=00_AfCvANINekNHmr9ci_n5aICRJPfapB3DZ_g5ixWKDlgcug&oe=64A2F7CB" />
+    <title>Tasnia Sharin</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
